[gd_scene load_steps=6 format=3 uid="uid://5rs7avunyxbv"]

[ext_resource type="Script" path="res://Assets/Scripts/Menu/ConfirmationDialogue.gd" id="1_nonxo"]
[ext_resource type="Texture2D" uid="uid://btfr8oxdeg1mx" path="res://Assets/Art/UI/CloseButton_Normal.png" id="2_p4olh"]
[ext_resource type="Texture2D" uid="uid://bgdlb1126254u" path="res://Assets/Art/UI/CloseButton_Pressed.png" id="3_osbgo"]
[ext_resource type="Texture2D" uid="uid://b28gcdo1jcxxs" path="res://Assets/Art/UI/CloseButton_Hover.png" id="4_mcj0e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_drwv0"]
bg_color = Color(0.54902, 0.54902, 0.54902, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.54902, 0.54902, 0.54902, 1)

[node name="ConfirmationDialogue" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nonxo")

[node name="GrayOverlayColor" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.568627)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -232.5
offset_top = -103.0
offset_right = 232.5
offset_bottom = 103.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_drwv0")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Top" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(425, 55.045)
layout_mode = 2

[node name="HeaderLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/Top"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -212.5
offset_top = -14.355
offset_right = 212.5
offset_bottom = 68.645
grow_horizontal = 2
size_flags_vertical = 0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 60
bbcode_enabled = true
text = "[center]Confirm[/center]"
fit_content = true
shortcut_keys_enabled = false

[node name="CloseButtonScaleEnabler" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/Top"]
custom_minimum_size = Vector2(52.326, 60.724)
layout_mode = 2
anchors_preset = 0
offset_left = 372.674
offset_right = 425.0
offset_bottom = 60.724
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="CloseButton" type="TextureButton" parent="PanelContainer/MarginContainer/VBoxContainer/Top/CloseButtonScaleEnabler"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.5
offset_top = -47.0
offset_right = 40.5
offset_bottom = 47.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.646, 0.646)
pivot_offset = Vector2(40, 47)
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = ExtResource("2_p4olh")
texture_pressed = ExtResource("3_osbgo")
texture_hover = ExtResource("4_mcj0e")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 20

[node name="PromptLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 20
text = "Prompt text"
fit_content = true

[node name="ButtonContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 55

[node name="YesButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Yes"

[node name="NoButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "No"
